--- a/pie.html
+++ b/pie.html
@@ -18,17 +18,19 @@
     </p>
     <hr />
     <h2>INGREDIENTS</h2>
-    <ul>1 cup white sugar</ul>
-    <ul>2 tbsp all-purpose flour</ul>
-    <ul>3 tbsp cornstarch</ul>
-    <ul>1/4 tsp salt</ul>
-    <ul>1 1/2 cups water</ul>
-    <ul>2 lemons, juiced and zested</ul>
-    <ul>2 tbsp butter</ul>
-    <ul>4 egg yolks, beaten</ul>
-    <ul>1 (9 inch) pie crust, baked</ul>
-    <ul>4 egg whites</ul>
-    <ul>6 tbsp white sugar</ul>
+    <ul>
+        <li>1 cup white sugar</li>
+        <li>2 tbsp all-purpose flour</li>
+        <li>3 tbsp cornstarch</li>
+        <li>1/4 tsp salt</li>
+        <li>1 1/2 cups water</li>
+        <li>2 lemons, juiced and zested</li>
+        <li>2 tbsp butter</li>
+        <li>4 egg yolks, beaten</li>
+        <li>1 (9 inch) pie crust, baked</li>
+        <li>4 egg whites</li>
+        <li>6 tbsp white sugar</li>
+    </ul>
     <hr />
     <h2>DIRECTIONS</h2>
     <ol>
