--- a/pie.html
+++ b/pie.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Grandma's Lemon Meringue Pie</title>
+    <link href="recipe.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
@@ -18,9 +19,9 @@
     </p>
     <hr />
     <h2>INGREDIENTS</h2>
-    <ul>
+    <ul class="ingredientlist">
         <li>1 cup white sugar</li>
-        <li>2 tbsp all-purpose flour</li>
+        <li class="tooltip">2 <u class="tbsp">tbsp<span class="tooltiptext">Tablespoon</span></u> all-purpose flour</li>
         <li>3 tbsp cornstarch</li>
         <li>1/4 tsp salt</li>
         <li>1 1/2 cups water</li>
@@ -37,25 +38,26 @@
         <li>Preheat Oven: Preheat oven to 350 degrees F (175 degrees C).</li>
         <li>Make Lemon Filling: In a medium saucepan ...
             <ul>
-                    <li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
-                    <li>Stir in water, lemon juice and lemon zest.</li>
-                    <li>Cook over medium-high heat, stirring frequently, until mixture comes to a boil.</li>
-                    <li>Stir in butter.</li>
-                    <li>Place egg yolks in a small bowl and gradually whisk in 1/2 cup of hot sugar mixture.</li>
-                    <li>Whisk egg yolk mixture back into remaining sugar mixture.</li>
-                    <li>Bring to a boil and continue to cook while stirring constantly until thick.</li>
-                    <li>Remove from heat.</li>
-                    <li>Pour filling into baked pastry shell.</li>
-                </ul></li>
-        
-        <li>Make Meringue: In a large glass or metal bowl ...
-                <ul>
-                        <li>Whip egg whites until foamy.</li>
-                        <li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
-                        <li>Spread meringue over pie, sealing the edges at the crust.</li>
-                    </ul>
+                <li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
+                <li>Stir in water, lemon juice and lemon zest.</li>
+                <li>Cook over medium-high heat, stirring frequently, until mixture comes to a boil.</li>
+                <li>Stir in butter.</li>
+                <li>Place egg yolks in a small bowl and gradually whisk in 1/2 cup of hot sugar mixture.</li>
+                <li>Whisk egg yolk mixture back into remaining sugar mixture.</li>
+                <li>Bring to a boil and continue to cook while stirring constantly until thick.</li>
+                <li>Remove from heat.</li>
+                <li>Pour filling into baked pastry shell.</li>
+            </ul>
         </li>
-        
+
+        <li>Make Meringue: In a large glass or metal bowl ...
+            <ul>
+                <li>Whip egg whites until foamy.</li>
+                <li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
+                <li>Spread meringue over pie, sealing the edges at the crust.</li>
+            </ul>
+        </li>
+
         <li>Bake: Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
     </ol>
     <p>This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years.
@@ -74,13 +76,13 @@
         - Jean-Luc Piecard</p>
     <hr />
     <h2>LINKS</h2>
-    <a href="https://validator.w3.org/check/referer">Search for other lemon meringue pie recipes</a>
-    <a href="https://validator.w3.org/check/referer">Home</a>
+    <p><a href="https://validator.w3.org/check/referer">Search for other lemon meringue pie recipes</a></p>
+    <p><a href="https://validator.w3.org/check/referer">Home</a></p>
     <hr />
     <a href="https://validator.w3.org/check/referer">
         <img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="html validator" />
     </a>
-    <p>Copyright Â© 2012 Granny's Pies
+    <p>Copyright © 2012 Granny's Pies
         <br>A Granny's Pies Production
         <br>All rights reserved </p>
 </body>
