--- a/pie.html
+++ b/pie.html
@@ -21,21 +21,21 @@
     <h2>INGREDIENTS</h2>
     <ul class="ingredientlist">
         <li>1 cup white sugar</li>
-        <li class="tooltip">2 <u class="tbsp">tbsp<span class="tooltiptext">Tablespoon</span></u> all-purpose flour</li>
-        <li>3 tbsp cornstarch</li>
-        <li>1/4 tsp salt</li>
+        <li class="tooltip">2 <u class="word">tbsp<span class="tooltiptext">Tablespoon</span></u> all-purpose flour</li>
+        <li class="tooltip">3 <u class="word">tbsp<span class="tooltiptext">Tablespoon</span></u> cornstarch</li>
+        <li class="tooltip">1/4 <u class="word">tsp<span class="tooltiptext">Teaspoon</span></u> salt</li>
         <li>1 1/2 cups water</li>
         <li>2 lemons, juiced and zested</li>
-        <li>2 tbsp butter</li>
+        <li class="tooltip">2 <u class="word">tbsp<span class="tooltiptext">Tablespoon</span></u> butter</li>
         <li>4 egg yolks, beaten</li>
         <li>1 (9 inch) pie crust, baked</li>
         <li>4 egg whites</li>
-        <li>6 tbsp white sugar</li>
+        <li class="tooltip">6 <u class="word">tbsp<span class="tooltiptext">Tablespoon</span></u> white sugar</li>
     </ul>
     <hr />
     <h2>DIRECTIONS</h2>
     <ol>
-        <li>Preheat Oven: Preheat oven to 350 degrees F (175 degrees C).</li>
+        <li><em>Preheat Oven</em>: Preheat oven to 350 degrees F (175 degrees C).</li>
         <li>Make Lemon Filling: In a medium saucepan ...
             <ul>
                 <li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
@@ -65,13 +65,15 @@
         it's a piece of cake pie!</p>
     <hr />
     <h2>USER COMMENTS</h2>
-    <p>This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with
+    <p class="quotation">This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is
+        thickened with
         cornstarch and flour in addition to egg yolks, and contains no milk.
         <br>- Emilie S.</p>
-    <p>Q: What do you call an ape who loves pie?
+    <p class="quotation">Q: What do you call an ape who loves pie?
         A: A meringue-utan.
         <br>- Vickie K.</p>
-    <p>This site can really engage my interest. Follow the recipe above and make it so! This pie is number one.
+    <p class="quotation">This site can really <strong>engage</strong> my interest. Follow the recipe above and
+        <strong>make it so!</strong> This pie is <strong>number one.</strong>
 
         - Jean-Luc Piecard</p>
     <hr />
@@ -82,6 +84,10 @@
     <a href="https://validator.w3.org/check/referer">
         <img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="html validator" />
     </a>
+
+    <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a>
+
     <p>Copyright © 2012 Granny's Pies
         <br>A Granny's Pies Production
         <br>All rights reserved </p>
